plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'Broomate'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

//Spring Security
	implementation "org.springframework.boot:spring-boot-starter-security"


    // Firebase Admin SDK
    implementation 'com.google.firebase:firebase-admin:9.7.0'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // WebSocket (for real-time messaging)
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //JWT
   // implementation 'com.auth0:java-jwt:4.5settings.gradle.0'

    implementation 'com.auth0:java-jwt:4.4.0'
//    //HTTP Client for Supabase
//
//    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
//    implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.1'
//
//
//    ////SL/TLS support for HTTP Client
//      implementation 'org.apache.httpcomponents.client5:httpclient5-fluent:5.2.1'

    // DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}